Add "Add-Opens" to jar manifest
Signed-off-by: solonovamax <solonovamax@12oclockpoint.com>